--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                         <li class="item-advantages">
                             <div class="item-advantages-conteiner">
                                 <svg class="advantages-icons" width="64" height="64">
-                                    <use href="./images/icons-anthena.svg#icon-antenna"></use>
+                                    <use href="./images/icons.svg#icon-antenna"></use>
                                 </svg>
                             </div>
                             <h3 class="feature-advantages">Strategy</h3>
@@ -83,7 +83,7 @@
                         <li class="item-advantages">
                             <div class="item-advantages-conteiner">
                                 <svg class="advantages-icons" width="64" height="64">
-                                    <use href="./images/icons-anthena.svg#icon-clock"></use>
+                                    <use href="./images/icons.svg#icon-clock"></use>
                                 </svg>
                             </div>
                             <h3 class="feature-advantages">Punctuality</h3>
@@ -95,7 +95,7 @@
                         <li class="item-advantages">
                             <div class="item-advantages-conteiner">
                                 <svg class="advantages-icons" width="64" height="64">
-                                    <use href="./images/icons-anthena.svg#icon-diagram"></use>
+                                    <use href="./images/icons.svg#icon-diagram"></use>
                                 </svg>
                             </div>
                             <h3 class="feature-advantages">Diligence</h3>
@@ -107,7 +107,7 @@
                         <li class="item-advantages">
                             <div class="item-advantages-conteiner">
                                 <svg class="advantages-icons" width="64" height="64">
-                                    <use href="./images/icons-anthena.svg#icon-astronaut"></use>
+                                    <use href="./images/icons.svg#icon-astronaut"></use>
                                 </svg>
                             </div>
                             <h3 class="feature-advantages">Technologies</h3>
@@ -406,7 +406,94 @@
                         </li>
                     </ul>
                 </div>
+                <div class="footer-column-third">
+                    <p class="footer-social-tex">Subscribe</p>
+                    <form class="footer-form">
+                            <div class="footer-form-wrap">
+                                <input type="text" 
+                                name="subscribe" 
+                                class="footer-input" 
+                                placeholder="E-mail" />
+                        <button type="submit" class="footer-form-button">Subscribe 
+                            <svg class="footer-form-icon" width="24" height="20">
+                            <use href="./images/icons.svg#icon-icon-send-1"></use>
+                        </svg></button>
+                            </div>
+                    </form>
+
+                </div>
             </div>
         </footer>
+
+        <!--* Backdrop-------------- -->
+        
+<div class="backdrop">
+    <div class="modal">
+        <bottom type="bottom" class="modal-close">
+            <svg class="icon-backdrop-close" width="8" height="8">
+                <use href="./images/icons.svg#icon-close-black-18dp-2-1"></use>
+            </svg>
+        </bottom>
+    
+        <p class="modal-title">Leave your contacts and we will call you back</p>
+        <form class="modal-form">
+            <div class="modal-field">
+                <label for="user-name" class="modal-label">Name</label>
+                <div class="modal-input-wrap">
+                    <input type="text" name="user-name" class="modal-input" id="user-name" autofocus 
+                    />
+                    <svg class="modal-icon" width="18" height="18">
+                        <use href="./images/icons.svg#icon-person-black-18dp-1"></use>
+                    </svg>
+                </div>
+            </div>
+            <div class="modal-field">
+                <label for="user-phone" class="modal-label">Phone</label>
+                <div class="modal-input-wrap">
+                    <input type="tel" name="user-phone" class="modal-input" id="user-phone" 
+                    />
+                    <svg class="modal-icon" width="18" height="18">
+                            <use href="./images/icons.svg#icon-phone-black-18dp-1"></use>
+                        </svg>
+                </div>
+            </div>
+            <div class="modal-field">
+                <label for="user-email" class="modal-label">Email</label>
+                <div class="modal-input-wrap">
+                    <input type="email" name="user-email" class="modal-input" id="user-email" 
+                    />
+                    <svg class="modal-icon" width="18" height="18">
+                            <use href="./images/icons.svg#icon-email-black-18dp-1"></use>
+                        </svg>
+                </div>
+            </div>
+            <div class="modal-field">
+                <label for="user-comment" 
+                class="modal-label">Comment</label>
+                <textarea name="user-comment" 
+                rows="6" 
+                class="modal-textarea" 
+                id="user-comment"
+                placeholder="Text input"></textarea>
+            </div>
+            <div class="modal-field modal-field-policy">
+                <input type="checkbox" 
+                name="policy" 
+                class="modal-checkbox visually-hidden" 
+                id="policy"
+                value="true">
+                <label for="policy" 
+                class="modal-label label-checkbox"><span>
+                    <svg class="icon-check" width="10" height="8">
+                        <use href="./images/icons.svg#icon-Vector-1"></use>
+                    </svg>
+                </span>I accept the terms and conditions of the <a href="" class="link-policy"> Privacy Policy</a>
+            </label>
+            </div>
+            <button type="submit" class="modal-button">Send</button>
+        </form>
+    </div>
+</div>
+
 </body>
 </html>
