--- a/index.html
+++ b/index.html
@@ -409,16 +409,16 @@
                 <div class="footer-column-third">
                     <p class="footer-social-tex">Subscribe</p>
                     <form class="footer-form">
-                            <div class="footer-form-wrap">
-                                <input type="text" 
-                                name="subscribe" 
-                                class="footer-input" 
-                                placeholder="E-mail" />
+                        <label for="input-fore-subscribe" class="footer-label visually-hidden">Name</label>
+                            <input type="email" 
+                            name="subscribe" 
+                            class="footer-input" 
+                            id="input-fore-subscribe"
+                            placeholder="E-mail" />
                         <button type="submit" class="footer-form-button">Subscribe 
                             <svg class="footer-form-icon" width="24" height="20">
-                            <use href="./images/icons.svg#icon-icon-send-1"></use>
+                                <use href="./images/icons.svg#icon-icon-send-1"></use>
                         </svg></button>
-                            </div>
                     </form>
 
                 </div>
@@ -427,13 +427,13 @@
 
         <!--* Backdrop-------------- -->
         
-<div class="backdrop">
+<div class="backdrop is-open">
     <div class="modal">
-        <bottom type="bottom" class="modal-close">
+        <button type="button" class="modal-close">
             <svg class="icon-backdrop-close" width="8" height="8">
                 <use href="./images/icons.svg#icon-close-black-18dp-2-1"></use>
             </svg>
-        </bottom>
+        </button>
     
         <p class="modal-title">Leave your contacts and we will call you back</p>
         <form class="modal-form">
@@ -442,7 +442,7 @@
                 <div class="modal-input-wrap">
                     <input type="text" name="user-name" class="modal-input" id="user-name" autofocus 
                     />
-                    <svg class="modal-icon" width="18" height="18">
+                    <svg class="modal-icon" width="18" height="24">
                         <use href="./images/icons.svg#icon-person-black-18dp-1"></use>
                     </svg>
                 </div>
@@ -452,7 +452,7 @@
                 <div class="modal-input-wrap">
                     <input type="tel" name="user-phone" class="modal-input" id="user-phone" 
                     />
-                    <svg class="modal-icon" width="18" height="18">
+                    <svg class="modal-icon" width="18" height="24">
                             <use href="./images/icons.svg#icon-phone-black-18dp-1"></use>
                         </svg>
                 </div>
@@ -462,7 +462,7 @@
                 <div class="modal-input-wrap">
                     <input type="email" name="user-email" class="modal-input" id="user-email" 
                     />
-                    <svg class="modal-icon" width="18" height="18">
+                    <svg class="modal-icon" width="18" height="24">
                             <use href="./images/icons.svg#icon-email-black-18dp-1"></use>
                         </svg>
                 </div>
@@ -478,11 +478,11 @@
             </div>
             <div class="modal-field modal-field-policy">
                 <input type="checkbox" 
-                name="policy" 
+                name="user-privacy" 
                 class="modal-checkbox visually-hidden" 
-                id="policy"
+                id="user-privacy"
                 value="true">
-                <label for="policy" 
+                <label for="user-privacy" 
                 class="modal-label label-checkbox"><span>
                     <svg class="icon-check" width="10" height="8">
                         <use href="./images/icons.svg#icon-Vector-1"></use>
