--- a/index.html
+++ b/index.html
@@ -409,12 +409,12 @@
                 <div class="footer-column-third">
                     <p class="footer-social-tex">Subscribe</p>
                     <form class="footer-form">
-                        <label for="input-fore-subscribe" class="footer-label visually-hidden">Name</label>
+                        <label class="footer-label visually-hidden">Name
                             <input type="email" 
                             name="subscribe" 
                             class="footer-input" 
-                            id="input-fore-subscribe"
-                            placeholder="E-mail" />
+                            <!--* id="input-fore-subscribe" -->
+                            placeholder="E-mail" /></label>
                         <button type="submit" class="footer-form-button">Subscribe 
                             <svg class="footer-form-icon" width="24" height="20">
                                 <use href="./images/icons.svg#icon-icon-send-1"></use>
@@ -483,7 +483,7 @@
                 id="user-privacy"
                 value="true">
                 <label for="user-privacy" 
-                class="modal-label label-checkbox"><span>
+                class="modal-label label-checkbox"><span class="modal-span-checkbox">
                     <svg class="icon-check" width="10" height="8">
                         <use href="./images/icons.svg#icon-Vector-1"></use>
                     </svg>
