--- a/index.html
+++ b/index.html
@@ -409,12 +409,12 @@
                 <div class="footer-column-third">
                     <p class="footer-social-tex">Subscribe</p>
                     <form class="footer-form">
-                        <label for="email-for-subscribe" class="footer-label visually-hidden"></label>
+                        <label class="footer-label">
                             <input type="email" 
                             name="subscribe" 
                             class="footer-input" 
-                            placeholder="E-mail"
-                            id="email-for-subscribe" />
+                            placeholder="E-mail" />
+                        </label>
                         <button type="submit" class="footer-form-button">Subscribe 
                             <svg class="footer-form-icon" width="24" height="24">
                                 <use href="./images/icons.svg#icon-icon-send-1"></use>
