--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
     
         <p class="modal-title">Leave your contacts and we will call you back</p>
         <form class="modal-form">
-            <div class="modal-field">
+            <div class="modal-field-first">
                 <label for="user-name" class="modal-label">Name</label>
                 <div class="modal-input-wrap">
                     <input type="text" name="user-name" class="modal-input" id="user-name" autofocus 
