--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
     
         <p class="modal-title">Leave your contacts and we will call you back</p>
         <form class="modal-form">
-            <div class="modal-field modal-field-first">
+            <div class="modal-field">
                 <label for="user-name" class="modal-label">Name</label>
                 <div class="modal-input-wrap">
                     <input type="text" name="user-name" class="modal-input" id="user-name" autofocus 
@@ -447,7 +447,7 @@
                     </svg>
                 </div>
             </div>
-            <div class="modal-field">
+            <div class="modal-field modal-field-second">
                 <label for="user-phone" class="modal-label">Phone</label>
                 <div class="modal-input-wrap">
                     <input type="tel" name="user-phone" class="modal-input" id="user-phone" 
