--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
                     </svg>
                 </div>
             </div>
-            <div class="modal-field modal-field-second">
+            <div class="modal-field">
                 <label for="user-phone" class="modal-label">Phone</label>
                 <div class="modal-input-wrap">
                     <input type="tel" name="user-phone" class="modal-input" id="user-phone" 
@@ -467,7 +467,7 @@
                         </svg>
                 </div>
             </div>
-            <div class="modal-field">
+            <div class="modal-field modal-field-comment">
                 <label for="user-comment" 
                 class="modal-label">Comment</label>
                 <textarea name="user-comment" 
